package com.practice.chapter5.practice4;

public abstract class DirectionStrategy {
    public abstract void move(Ball ball);
}
