package com.practice.chapter5.practice4;

public abstract class DrawStrategy {
    public abstract void draw(Ball ball);
}
